testdata/fixtures/negative/typed-orm/repository.go
package typedorm

type ResourceRepository struct{}

type ResourceQueryBuilder struct{}
